--- a/css/ex2.css
+++ b/css/ex2.css
@@ -59,11 +59,15 @@ main {
 #sentence1 {
     font-family:'Nunito';
     font-size: 36px;
+    font-weight: bold;
 }
 #sentence2 {
     font-family:'Nunito';
     font-size: 24px;
     padding-top: 16px;
+}
+.no-bold {
+    font-weight: normal;
 }
 .title {
     font-size: 30px;
