--- a/css/ex2.css
+++ b/css/ex2.css
@@ -120,6 +120,10 @@ p {
     margin-left: 24px;
     margin-top: 24px;
 }
+.card h4 {
+    font-family: "Rubik";
+    font-size: 24px;
+}
 .card img {
     border-radius: 80px;
 }
