--- a/exercises/ex3/css/ex3.css
+++ b/exercises/ex3/css/ex3.css
@@ -7,8 +7,6 @@ body, html {
     position: relative;
 }
 body{
-    display: flex;
-    flex-direction: column;
     overflow: auto;
 }
 header, main, footer, nav, aside, section  {
@@ -29,14 +27,13 @@ header nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 34px;
-    height: 51px;
+    height: 100%;
 }
 header nav a {
     margin-right: 18px;
     height: 100%;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 }
 header nav a:hover span {
     font-weight: 700;
@@ -47,16 +44,16 @@ header nav a span {
     font-size: 24px;
 }
 header nav a.selected {
-    background-image: radial-gradient(circle at 38% 10px, red 7px, transparent 6px);
+    background-image: radial-gradient(circle at 50% 20%, red 7px, transparent 6px);
 }
 #wrapper {
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
 }
 main{
     flex-grow: 1;
     justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: row;
 }
@@ -164,7 +161,7 @@ main #mix-logo > section:nth-child(1) > section:nth-child(2) > section:nth-child
 aside{
     float: right;
     background-color: #EBEF18;
-    height: 100%;
+    height: 100vh;
     width: 169px;
     display: flex;
     flex-direction: column;
