--- a/exercises/ex3/css/ex3.css
+++ b/exercises/ex3/css/ex3.css
@@ -146,9 +146,8 @@ main #mix-logo > section:nth-child(1) > section:nth-child(2) > section:nth-child
     flex: 1;
 }
 .vertical-box-list section {
-    --width: calc((100vw - 55px - 151px - 151px)/2);
-    width: var(--width);
-    height: calc(var(--width) * (299 / 457));
+    width: 457px;
+    height: 299px;
     background-color:#C4C4C4;
     margin-bottom: 70px;
 }
