remove scroll on x yonit requsted

--- a/exercises/ex3/css/ex3.css
+++ b/exercises/ex3/css/ex3.css
@@ -83,6 +83,7 @@ main{
     display: flex;
     flex-direction: row;
     overflow: scroll;
+    overflow-x: hidden;
 }
 #about-mix {
     display: flex;
