--- a/exercises/ex3/css/ex3.css
+++ b/exercises/ex3/css/ex3.css
@@ -192,6 +192,26 @@ main{
 .vertical-box-list:nth-child(2) {
     margin-top: 287px;
 }
+#content-area {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    align-content: flex-start;
+    justify-content: center;
+}
+#content-area > section {
+    background-color: black;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 64px;
+    margin-top: 123px;
+    margin-left: 64px;
+    margin-right: 64px;
+}
 aside{
     float: right;
     background-color: #EBEF18;
