fixed bug with responsive height in index html

--- a/exercises/ex4/css/style.css
+++ b/exercises/ex4/css/style.css
@@ -12,9 +12,10 @@ html, body, #wrapper, main, #game_area {
     height: 100%;
     width: 100%;
 }
+#mainBody {
+    height: auto;
+}
 body{
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
