--- a/exercises/ex4/css/style.css
+++ b/exercises/ex4/css/style.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.cdnfonts.com/css/pixelade');
+@font-face{
+    font-family:pixelade;
+    font-style:normal;
+    font-weight:400;
+    src:local('Pixelade'),
+    url(https://fonts.cdnfonts.com/s/7380/PIXELADE.woff) format('woff');
+    font-display: swap;
+}
 * {
     padding: 0;
     margin: 0;
@@ -35,9 +42,9 @@ main > * {
     right: 0;
     height: 100%;
 }
-#form_area img {
+/* #form_area img {
     width:20%;
-}
+} */
 #form_area input:not([type='submit']), #form_area textarea{
     background-color: transparent;
     color: white !important;
