--- a/exercises/ex4/css/style.css
+++ b/exercises/ex4/css/style.css
@@ -42,9 +42,9 @@ main > * {
     right: 0;
     height: 100%;
 }
-/* #form_area img {
+#form_area img {
     width:20%;
-} */
+}
 #form_area input:not([type='submit']), #form_area textarea{
     background-color: transparent;
     color: white !important;
